# crumb

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  resign-pr-commits.yml
docs/: action-inbox-ux.md  architecture.md  discord-setup.md  plan.md
sidecar/: build.ts  package.json  tsconfig.json
sidecar/src/: host.ts  index.ts  types.ts
sidecar/src/ai/: extract.ts
sidecar/src/discord/: bot.ts  scraper.ts
src/: App.tsx  SettingsApp.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_action_item_dedupe.sql  0003_assignee_keys.sql  0004_scrape_cursor.sql  0005_scrape_range.sql  0006_action_urls.sql  0007_watched_channels.sql
src-tauri/src/: ai.rs  commands.rs  db.rs  discord.rs  env.rs  events.rs  lib.rs  main.rs  runtime.rs  settings.rs  sidecar.rs
src/components/: ActionList.tsx  ScrapeDetail.tsx  ScrapeList.tsx  StatusDot.tsx
src/lib/: ipc.ts  types.ts
